# sagittal_average

./: CITATION.md  LICENSE.md  README.md  pyproject.toml  test_sagittal_brain.py
.github/workflows/: pytest.yml  sphinx.yml
docs/: conf.py
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/content/: sagittal-average-docs.doctree
docs/_build/html/_modules/: index.html  sagittal_brain.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/content/: sagittal-average-docs.rst.txt
docs/_build/html/content/: sagittal-average-docs.html
sagittal_average/: __init__.py
sagittal_average.egg-info/: PKG-INFO  SOURCES.txt
src/sagittal_average/: sagittal_brain.py
src/sagittal_average.egg-info/: SOURCES.txt
test/: test_call_command.py  test_sagittal_brain.py
